# cmake_generic

./: CMakeLists.txt  README.md
cmake/: cortex-m4f-hard-clang.cmake  cortex-m4f-hard-gnu.cmake
cmake/Platform/: Generic-Clang-ARM.cmake  Generic-Clang-C-ARM.cmake  Generic-GNU-ARM.cmake  Generic-GNU-C-ARM.cmake  Generic-GNU-CXX-ARM.cmake
